Ported CMSG_REQUEST_CEMETERY_LIST and SMSG_REQUEST_CEMETERY_LIST_RESPONSE (to finish)

--- a/Projects/Servers/World/WorldNode/WorldNode.csproj
+++ b/Projects/Servers/World/WorldNode/WorldNode.csproj
@@ -83,10 +83,13 @@
     <Compile Include="Network\Server.cs" />
     <Compile Include="Network\NodeSession.cs" />
     <Compile Include="Packets\Client\LogoutRequest.cs" />
+    <Compile Include="Packets\Client\RequestCemeteryList.cs" />
     <Compile Include="Packets\Handlers\AuthHandler.cs" />
     <Compile Include="Packets\Handlers\LogoutHandler.cs" />
+    <Compile Include="Packets\Handlers\MiscHandler.cs" />
     <Compile Include="Packets\PacketManager.cs" />
     <Compile Include="Packets\Server\LogoutComplete.cs" />
+    <Compile Include="Packets\Server\RequestCemeteryListResponse.cs" />
     <Compile Include="WorldNode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
